# game-engine

./: .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EDGE-TEST-REPORT.md  LANGUAGE.md  LICENSE  PLAN.md  PRIMITIVES.md  README.md  ROADMAP.md  VISION.md  showcase.game  showcase.html  validate.py
.ai/: SWANS-ANALYSIS.md
demo/: ambient-intelligence.js  index.html  status-orb.js
examples/: 001-hello.game  002-audio-reactive.game  003-interactive.game  ember-flow.game  (+18 more)
game-compiler/: Cargo.toml
game-compiler/.github/workflows/: ci.yml
game-compiler/examples/: 002-audio-reactive.game  003-interactive.game  004-resonance.game  audio-spectrum.game  cinematic-arc.game  dashboard-gauge.game  galaxy.game  hello.game  kaleidoscope.game  loading-ring.game  mouse-follow.game  neon-ring.game  starfield.game
game-compiler/src/: ast.rs  builtins.rs  codegen.rs  docs.rs  emit_wgsl.rs  error.rs  ir.rs  lexer.rs  lib.rs  lower.rs  main.rs  optimize.rs  parser.rs  resolver.rs  runtime.rs  server.rs  snapshot.rs  token.rs  wasm.rs
game-compiler/src/codegen/: analysis.rs  builtins.rs  expr.rs  glsl.rs  mod.rs  raymarch.rs  react.rs  resonance.rs  stages.rs  tests.rs  wgsl.rs
game-compiler/src/lsp/: backend.rs  completion.rs  docs.rs  main.rs  mod.rs
game-compiler/src/runtime/: arc.rs  component.rs  helpers.rs  html.rs  mod.rs
game-compiler/src/server/: css.rs  export.rs  inline_js.rs  mod.rs  page.rs  panels.rs  timeline.rs  toolbar.rs  util.rs
game-compiler/tests/: batch_compile.rs  snapshot_render.rs  wgsl_validation.rs
(+152 files in other folders)
