[package]
name = "game-compiler"
version = "0.2.0"
edition = "2021"
description = "Compiler for the .game visual component language"
license = "MIT"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
logos = "0.14"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "7"
tower-livereload = "0.9"
tower = "0.5"
