[package]
name = "game-compiler"
version = "0.2.0"
edition = "2021"
description = "Compiler for the .game visual component language"
license = "MIT"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
logos = "0.14"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
notify = "7"
tower-livereload = "0.9"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional: snapshot testing (GPU headless rendering + image comparison)
wgpu = { version = "23", optional = true }
image = { version = "0.25", optional = true }
pollster = { version = "0.4", optional = true }

[features]
default = []
snapshot = ["dep:wgpu", "dep:image", "dep:pollster"]
